clang/test/BSC/Negative/Ownership/Borrow/borrow_func/borrow_func.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

int *borrow f(); // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}
int *borrow f1(int a) { // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}
    static int b = 1;
    return &mut b;
}
int *borrow f2(int a, int *borrow p); // legal

struct R {
    int * borrow p1;
};

int *borrow f3(struct R); // legal
struct R f4 () {} // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}

int *borrow struct R::foo(int a); // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}
int *borrow struct R::foo(int a) { // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}
    static int b = 1;
    return &mut b;
}

struct MyStruct<T> {};
struct MyStruct<int * borrow> s;
struct MyStruct<int borrow> s1;  //expected-error {{borrow type requires a pointer or reference ('int' is invalid)}}

typedef int* borrow (*PF)(); // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}
int *borrow (*PF1)(int a);   // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}
typedef int* borrow (*PF2)(struct R); // legal
typedef int* borrow (*PF3)(int a);  // expected-error {{no borrow qualified type found in the function parameters, the return type is not allowed to be borrow qualified}}
typedef int* (*PF4)(struct R); // legal
typedef float* borrow (*PF5)(struct R); // legal
void test() {
  PF2 p1 = f3; // legal
  PF4 p2 = f3; // expected-error {{incompatible borrow function pointer types, cannot cast 'PF4' (aka 'int *(*)(struct R)') to 'int *borrow (struct R)'}}
  PF5 p3 = f3; // expected-error {{incompatible borrow function pointer types, cannot cast 'PF5' (aka 'float *borrow (*)(struct R)') to 'int *borrow (struct R)'}}
}
